changed nginx config

--- a/reverse-proxy/default.conf
+++ b/reverse-proxy/default.conf
@@ -2,6 +2,8 @@ server {
     listen 80;
 
     location / {
-        proxy_pass http://app/index.html;
+        proxy_pass http://app;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
     }
 }
