changed proxy pass

--- a/reverse-proxy/default.conf
+++ b/reverse-proxy/default.conf
@@ -2,8 +2,9 @@ server {
     listen 80;
 
     location / {
-        proxy_pass http://app;
+        proxy_pass http://app/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
     }
 }
+
