--- a/reverse-proxy/default.conf
+++ b/reverse-proxy/default.conf
@@ -1,8 +1,9 @@
-server {
-    listen 80;
+http {
+    server {
+        listen 80;
 
-    location / {
-        proxy_pass http://app:80;
+        location / {
+            proxy_pass http://app:80;
+        }
     }
 }
-
