changed container name

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     app:
         build:
             context: ./app
-        container_name: webapp
+        container_name: app
         expose:
             - "80"
         ports:
