--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,19 @@
-version: '3.8'
+version: '3.9'
 
 services:
     app:
-        build:
-            context: ./app
-        container_name: app
-        expose:
-            - "80"
+        build: ./app
+        container_name: static-app
+        ports:
+            - "8080:80"
 
-    proxy:
+    reverse-proxy:
         image: nginx:stable-alpine
-        container_name: reverse-proxy
+        container_name: nginx-proxy
+        volumes:
+            - ./nginx.conf:/etc/nginx/conf.d/default.conf
         ports:
             - "80:80"
-        volumes:
-            - ./reverse-proxy/default.conf:/etc/nginx/conf.d/default.conf:ro
         depends_on:
             - app
+
