--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,18 @@
 version: '3.9'
 
 services:
-    app:
-        build: ./app
-        container_name: static-app
-        ports:
-            - "8080:80"
+  app:
+    build: ./app
+    container_name: static-app
+    ports:
+      - "8080:80"
 
-    reverse-proxy:
-        image: nginx:stable-alpine
-        container_name: nginx-proxy
-        volumes:
-            - ./nginx.conf:/etc/nginx/conf.d/default.conf
-        ports:
-            - "80:80"
-        depends_on:
-            - app
-
+  reverse-proxy:
+    image: nginx:stable-alpine
+    container_name: nginx-proxy
+    ports:
+      - "80:80"
+    volumes:
+      - ./reverse-proxy/default.conf:/etc/nginx/conf.d/default.conf:ro
+    depends_on:
+      - app
