--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,22 @@ services:
     ports:
       - "80:80"
     volumes:
-      - ./reverse-proxy/default.conf:/etc/nginx/conf.d/default.conf:ro
+      - ./reverse-proxy:/etc/nginx/conf.d:ro
     depends_on:
       - app
+
+
+# services:
+#   nginx-proxy:
+#     image: nginx:stable-alpine
+#     ports:
+#       - "80:80"
+#     volumes:
+#       - ./reverse-proxy:/etc/nginx/conf.d:ro
+
+#   app:
+#     build:
+#       context: .
+#     container_name: static-app
+#     expose:
+#       - "80"
