--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,34 +1,18 @@
 version: '3.9'
 
-# services:
-#   app:
-#     build: ./app
-#     container_name: static-app
-#     ports:
-#       - "8080:80"
-
-#   reverse-proxy:
-#     image: nginx:stable-alpine
-#     container_name: nginx-proxy
-#     ports:
-#       - "80:80"
-#     volumes:
-#       - ./reverse-proxy:/etc/nginx/conf.d:ro
-#     depends_on:
-#       - app
-
-
 services:
-  nginx-proxy:
+  app:
+    build: ./app
+    container_name: static-app
+    ports:
+      - "8080:80"
+
+  reverse-proxy:
     image: nginx:stable-alpine
+    container_name: nginx-proxy
     ports:
       - "80:80"
     volumes:
       - ./reverse-proxy:/etc/nginx/conf.d:ro
-
-  app:
-    build:
-      context: .
-    container_name: static-app
-    expose:
-      - "80"
+    depends_on:
+      - app
