trying without ro

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,7 @@ services:
     ports:
       - "80:80"
     volumes:
-      - ./reverse-proxy:/etc/nginx/conf.d:ro
+      - ./reverse-proxy:/etc/nginx/conf.d
     depends_on:
       - app
+
